--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@theme-toggles/react": "^4.1.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "react": "^18.2.0",
